Continune Setup of backend, add PlayerCharacter and Message endpoints